added webkit overlow setting

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,6 +31,7 @@ $primary-color: #333;
     grid-column: 2;
     border: 1px solid blue;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     background-color: gray;
 }
 
